crates/reddb-server/tests/snapshots/parser_snapshots__eof_after_insert_into.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"INSERT INTO\")"
---
input: "INSERT INTO"
kind:  Syntax
error: Parse error at 1:12: Unexpected token: EOF (expected: identifier)
