crates/reddb-server/tests/snapshots/parser_snapshots__eof_after_update_set.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"UPDATE t SET\")"
---
input: "UPDATE t SET"
kind:  Syntax
error: Parse error at 1:13: Unexpected token: EOF (expected: identifier)
