crates/reddb-server/tests/snapshots/parser_snapshots__eof_mid_where.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t WHERE\")"
---
input: "SELECT * FROM t WHERE"
kind:  Syntax
error: Parse error at 1:22: Unexpected token: EOF (expected: identifier or field name)
