crates/reddb-server/tests/snapshots/parser_snapshots__groupby_without_column.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t GROUP BY\")"
---
input: "SELECT * FROM t GROUP BY"
kind:  Syntax
error: Parse error at 1:25: Unexpected token: EOF (expected: identifier or field name)
