crates/reddb-server/tests/snapshots/parser_snapshots__leading_number_in_ident.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"SELECT 1abc FROM t\")"
---
input: "SELECT 1abc FROM t"
kind:  Syntax
error: Parse error at 1:9: Unexpected token after query: abc
