crates/reddb-server/tests/snapshots/parser_snapshots__limit_negative_text.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t LIMIT abc\")"
---
input: "SELECT * FROM t LIMIT abc"
kind:  Syntax
error: Parse error at 1:23: Unexpected token: abc (expected: integer)
