crates/reddb-server/tests/snapshots/parser_snapshots__limit_without_value.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"SELECT * FROM t LIMIT\")"
---
input: "SELECT * FROM t LIMIT"
kind:  Syntax
error: Parse error at 1:22: Unexpected token: EOF (expected: integer)
