crates/reddb-server/tests/snapshots/parser_snapshots__missing_from_keyword.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"SELECT a, b WHERE x = 1\")"
---
UNEXPECTED OK
input: "SELECT a, b WHERE x = 1"
