crates/reddb-server/tests/snapshots/parser_snapshots__missing_into_keyword.snap
---
source: crates/reddb-server/tests/parser_snapshots.rs
expression: "fmt_parse_error(\"INSERT t (a) VALUES (1)\")"
---
input: "INSERT t (a) VALUES (1)"
kind:  Syntax
error: Parse error at 1:8: Unexpected token: t (expected: INTO)
